--- a/src/core/ctrl/apax.yml
+++ b/src/core/ctrl/apax.yml
@@ -1,5 +1,5 @@
 name: "@ix-ax/ix.framework.core"
-version    : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.116'
+version     : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.117'
 type: lib
 targets:
   #  - "1500"
@@ -9,8 +9,7 @@ targets:
 files:
   - src
 devDependencies:
-  "@ax/sdk": 3.0.8
-
+  "@ax/sdk": 3.0.8  
 scripts:
   postbuild:
     - dotnet ixc
@@ -20,3 +19,4 @@ dependencies:
   "@ax/system-serde": ^1.3.13
   "@ax/system-bitaccess": ^5.0.4
   "@ax/system-datetime": ^3.1.3
+  "ix.framework.abstractions" : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.117'
