--- a/src/simatic1500/ctrl/apax.yml
+++ b/src/simatic1500/ctrl/apax.yml
@@ -1,4 +1,4 @@
-name: "@ix-ax/ix.framework.data"
+name: "@ix-ax/ix.framework.simatic1500"
 version                                                                                              : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.125'
 type: lib
 targets:
