--- a/src/data/ctrl/apax.yml
+++ b/src/data/ctrl/apax.yml
@@ -1,5 +1,5 @@
 name: "@ix-ax/ix.framework.data"
-version                                                                                              : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.125'
+version                                                                                                 : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.126'
 type: lib
 targets:
 #  - "1500"
@@ -9,7 +9,8 @@ targets:
 files:
   - src
 dependencies:
-  "@ix-ax/ix.framework.core"                                                          : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.125'
+  "@ix-ax/ix.framework.core"                                                             : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.126'
+  "@ix-ax/ix.framework.utils"                                                             : '0.1.4-48--NEW-FEATURE-Implement-alarm-messaging.126'
 devDependencies:
   "@ax/sdk": 3.0.8
 
