--- a/src/integrations/ctrl/apax.yml
+++ b/src/integrations/ctrl/apax.yml
@@ -1,5 +1,5 @@
 name: "axopen.integrations"
-version                                                                                                                                                                                 : '0.1.4-alpha.53'
+version                                                                                                                                                                                  : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
 type: app
 targets:
 #  - "1500"
@@ -8,9 +8,10 @@ targets:
   - plcsim
   - axunit-llvm
 dependencies:
-  "@ix-ax/axopen.core"                                                                                                                                                                                  : '0.1.4-alpha.53'
-  "@ix-ax/axopen.data"                                                                                                                                                                                  : '0.1.4-alpha.53'
-  "@ix-ax/axopen.probers"                                                                                                                                                                               : '0.1.4-alpha.53'
+  "@ix-ax/axopen.core"                                                                                                                                                                                   : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
+  "@ix-ax/axopen.data"                                                                                                                                                                                   : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
+  "@ix-ax/axopen.probers"                                                                                                                                                                                : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
+  "@ix-ax/axopen.messaging"                                                                                                                                                                              : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
   "@ax/sdk": ^3.0.11
   "@ax/sld": ^0.14.2
 variables:
