--- a/src/integrations/ctrl/apax.yml
+++ b/src/integrations/ctrl/apax.yml
@@ -7,13 +7,18 @@ targets:
   - axunit
   - plcsim
   - llvm
+
+devDependencies:
+  "@ax/sdk": 3.0.18
+  "@ax/sld": ^0.14.2
+
 dependencies:
   "@ix-ax/axopen.core"                                                                                                                                                                                   : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
   "@ix-ax/axopen.data"                                                                                                                                                                                   : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
   "@ix-ax/axopen.probers"                                                                                                                                                                                : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
   "@ix-ax/axopen.messaging"                                                                                                                                                                              : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.65'
-  "@ax/sdk": ^3.0.11
-  "@ax/sld": ^0.14.2
+#  "@ax/sdk": ^3.0.11
+#  "@ax/sld": ^0.14.2
   "@ax/simatic-1500-clocks": ^3.0.6
   "@ax/axunit-library": ^4.0.6
 
