--- a/src/simatic1500/ctrl/apax.yml
+++ b/src/simatic1500/ctrl/apax.yml
@@ -3,14 +3,14 @@ version : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
 type: lib
 targets:
   #  - "1500"
-  #  - llvm
-  #  - axunit
   - axunit-llvm
+  - llvm  
 files:
   - src
 dependencies:
   "@ax/simatic-1500": 3.0.2
   "@ix-ax/axopen.abstractions" : '0.1.4-55-Create-unit-tests-for-messaging-tranfered-from-tco.72'
+  "@ax/axunit-library": ^4.0.6  
 devDependencies:
   "@ax/sdk": 3.0.18
 
