--- a/docfx/articles/toc.yml
+++ b/docfx/articles/toc.yml
@@ -25,3 +25,8 @@
     href: ~/articles/core/AXOCOMPONENT.md  
 - name: AXOpen.Data
   href: ~/articles/data/README.md
+- name: AXOpen.Messaging
+  href: ~/articles/messaging/README.md
+  items:
+  - name: AxoMessenger
+    href: ~/articles/messaging/AXOMESSENGER.md
