--- a/src/integrations/src/AXOpen.Integrations.Blazor/axopen_integrations_blazor.csproj
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/axopen_integrations_blazor.csproj
@@ -19,6 +19,7 @@
 		<ProjectReference Include="..\..\..\core\src\AXOpen.Core.Blazor\axopen_core_blazor.csproj" />
 		<ProjectReference Include="..\..\..\data\src\AXOpen.Data.Blazor\axopen_data_blazor.csproj" />
 		<ProjectReference Include="..\..\..\data\src\repositories\Json\AXOpen.Data.Json.csproj" />
+		<ProjectReference Include="..\..\..\security\src\AXOpen.Security.Blazor\AXOpen.Security.Blazor.csproj" />
 		<ProjectReference Include="..\AXOpen.Integrations\axopen_integrations.csproj" />
 	</ItemGroup>
 
