--- a/src/core/src/AXOpen.Core.Blazor/axopen_core_blazor.csproj
+++ b/src/core/src/AXOpen.Core.Blazor/axopen_core_blazor.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="AXSharp.Presentation.Blazor.Controls" Version="0.14.0-alpha.110" />
     <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.8" />
   </ItemGroup>
 
   <ItemGroup>
