--- a/src/templates.simple/ctrl/apax.yml
+++ b/src/templates.simple/ctrl/apax.yml
@@ -13,6 +13,7 @@ devDependencies:
 dependencies:
   "@ix-ax/axopen.data": '0.1.4-alpha.79'
   "@ix-ax/axopen.simatic1500": '0.1.4-alpha.79'
+  "@ax/system-serde": ^2.0.2
 
 variables:
   APAX_BUILD_ARGS: [ -d ]
@@ -27,5 +28,5 @@ scripts:
     - apax build
     # Here you will need to set the argumen -t to your plc OP and -i to platfrom you are dowloading to
     # --default-server-interface is a must if you are using WebAPI      
-    - apax sld --accept-security-disclaimer -t 192.168.0.4 -i .\\bin\\plcsim\\
-      -r --default-server-interface
+    - apax sld --accept-security-disclaimer -t 10.10.10.1 -i .\\bin\\1500\\ -r
+      --default-server-interface
