--- a/src/core/src/AXOpen.Core.Blazor/axopen_core_blazor.csproj
+++ b/src/core/src/AXOpen.Core.Blazor/axopen_core_blazor.csproj
@@ -29,10 +29,12 @@
     <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.8" />
+	  
   </ItemGroup>
 
   <ItemGroup>
 	  <ProjectReference Include="..\AXOpen.Core\ix_ax_axopen_core.csproj" />
+	  <ProjectReference Include="C:\MTS\ix\axsharp\src\AXSharp.abstractions\src\AXSharp.Abstractions\AXSharp.Abstractions.csproj" />
   </ItemGroup>
 
   <ItemGroup>
