--- a/docfx/articles/toc.yml
+++ b/docfx/articles/toc.yml
@@ -1,50 +1,51 @@
 - name: Introduction
   href: intro.md
 - name: AXOpen.Core
-  href: ~/articles/core/README.md  
+  href: ~/articles/core/README.md
   items:
-  - name: AxoContext
-    href: ~/articles/core/AXOCONTEXT.md
-  - name: AxoObject
-    href: ~/articles/core/AXOOBJECT.md
-  - name: AxoTask
-    href: ~/articles/core/AXOTASK.md
-  - name: AxoToggleTask
-    href: ~/articles/core/AXOTOGGLETASK.md
-  - name: AxoMomentaryTask
-    href: ~/articles/core/AXOMOMENTARYTASK.md
-  - name: AxoRemoteTask
-    href: ~/articles/core/AXOREMOTETASK.md  
-  - name: AxoStep
-    href: ~/articles/core/AXOSTEP.md
-  - name: AxoSequencer
-    href: ~/articles/core/AXOSEQUENCER.md  
-  - name: AxoSequencerContainer
-    href: ~/articles/core/AXOSEQUENCERCONTAINER.md  
-  - name: AxoComponent
-    href: ~/articles/core/AXOCOMPONENT.md  
-  - name: AlertDialog
-    href: ~/articles/core/ALERTDIALOG.md  
+      - name: AxoContext
+        href: ~/articles/core/AXOCONTEXT.md
+      - name: AxoObject
+        href: ~/articles/core/AXOOBJECT.md
+      - name: AxoTask
+        href: ~/articles/core/AXOTASK.md
+      - name: AxoToggleTask
+        href: ~/articles/core/AXOTOGGLETASK.md
+      - name: AxoMomentaryTask
+        href: ~/articles/core/AXOMOMENTARYTASK.md
+      - name: AxoRemoteTask
+        href: ~/articles/core/AXOREMOTETASK.md
+      - name: AxoStep
+        href: ~/articles/core/AXOSTEP.md
+      - name: AxoSequencer
+        href: ~/articles/core/AXOSEQUENCER.md
+      - name: AxoSequencerContainer
+        href: ~/articles/core/AXOSEQUENCERCONTAINER.md
+      - name: AxoComponent
+        href: ~/articles/core/AXOCOMPONENT.md
+      - name: AlertDialog
+        href: ~/articles/core/ALERTDIALOG.md
 - name: AXOpen.Data
   href: ~/articles/data/README.md
   items:
-  - name: Data exchange
-    href: ~/articles/data/AxoDataExchange.md
-  - name: Data fragmets exchange
-    href: ~/articles/data/AxoDataFragmentExchange.md
+      - name: Data exchange
+        href: ~/articles/data/AxoDataExchange.md
+      - name: Data fragmets exchange
+        href: ~/articles/data/AxoDataFragmentExchange.md
 - name: AXOpen.Messaging
   href: ~/articles/messaging/README.md
   items:
-  - name: AxoMessenger
-    href: ~/articles/messaging/AXOMESSENGER.md
+      - name: AxoMessenger
+        href: ~/articles/messaging/AXOMESSENGER.md
 - name: AXOpen.Logging
-  href: ~/articles/logging/README.md   
+  href: ~/articles/logging/README.md
   items:
-  - name: AxoLogger
-    href: ~/articles/logging/AXOLOGGER.md 
+      - name: AxoLogger
+        href: ~/articles/logging/AXOLOGGER.md
 - name: AXOpen.Security
-  href: ~/articles/security/README.md  
+  href: ~/articles/security/README.md
   items:
-  - name: Installation
-    href: ~/articles/security/INSTALLATION.md
-
+      - name: Installation
+        href: ~/articles/security/INSTALLATION.md
+- name: Template themes
+  href: ~/articles/themes/README.md
