--- a/src/inspectors/ctrl/apax.yml
+++ b/src/inspectors/ctrl/apax.yml
@@ -13,4 +13,4 @@ scripts:
     - dotnet ixc
 dependencies:
   "@ax/system-timer": ^4.0.1
-  "@ix-ax/axopen.abstractions": '0.1.4-alpha.79'
+  "@ix-ax/axopen.core": '0.1.4-alpha.79'
