--- a/src/security/src/AXOpen.Security.Blazor/AXOpen.Security.Blazor.csproj
+++ b/src/security/src/AXOpen.Security.Blazor/AXOpen.Security.Blazor.csproj
@@ -24,4 +24,19 @@
   <ItemGroup>
 	  <ProjectReference Include="..\AXOpen.Security\AXOpen.Security.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Resources\BlazorResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>BlazorResources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\BlazorResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>BlazorResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
