--- a/src/components.abstractions/src/AXOpen.Components.Abstractions.Blazor/axopen_components_abstractions_blazor.csproj
+++ b/src/components.abstractions/src/AXOpen.Components.Abstractions.Blazor/axopen_components_abstractions_blazor.csproj
@@ -4,13 +4,9 @@
     <TargetFrameworks>net7.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <PackageId>AXOpen.Core.Blazor</PackageId>
-    <RootNamespace>AXOpen.Core.Blazor</RootNamespace>
+    <PackageId>AXOpen.Components.Abstractions.Blazor</PackageId>
+    <RootNamespace>AXOpen.Components.Abstractions.Blazor</RootNamespace>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Content Remove="C:\Users\peto.kurhajec\.nuget\packages\ix.presentation.blazor.controls\0.6.0-alpha.18\contentFiles\any\net7.0\Styles\custom.scss" />
-  </ItemGroup>
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
