--- a/src/integrations/ctrl/apax.yml
+++ b/src/integrations/ctrl/apax.yml
@@ -2,8 +2,8 @@ name: "axopen.integrations"
 version: '0.1.4-alpha.79'
 type: app
 targets:
-  - "1500"
-  #- plcsim
+  #- "1500"
+  - plcsim
   #- axunit-llvm
 devDependencies:
   "@ax/sdk": ^4.0.3
