--- a/src/integrations/ctrl/apax.yml
+++ b/src/integrations/ctrl/apax.yml
@@ -4,7 +4,7 @@ type: app
 targets:
   #- "1500"
   - plcsim
-  #- axunit-llvm
+  - axunit-llvm
 devDependencies:
   "@ax/sdk": ^4.0.3
   "@ax/sld": ^0.15.9
