--- a/src/traversals/apax/apax.yml
+++ b/src/traversals/apax/apax.yml
@@ -23,6 +23,8 @@ dependencies:
   '@ix-ax/axopen.components.elements': 0.0.0-dev.0
   app_axopen.components.festo.drives: 0.0.0-dev.0
   '@ix-ax/axopen.components.festo.drives': 0.0.0-dev.0
+  app_axopen.components.kuka.robotics: 0.0.0-dev.0
+  '@ix-ax/axopen.components.kuka.robotics': 0.0.0-dev.0
   app_axopen.components.mitsubishi.robotics: 0.0.0-dev.0
   '@ix-ax/axopen.components.mitsubishi.robotics': 0.0.0-dev.0
   pneumaticcomponents: 0.0.0-dev.0
@@ -46,6 +48,7 @@ dependencies:
   '@ix-ax/axopen.io': 0.0.0-dev.0
   probers-app: 0.0.0-dev.0
   '@ix-ax/axopen.probers': 0.0.0-dev.0
+  sandbox: 0.4.2-alpha.216
   simatic1500-app: 0.0.0-dev.0
   '@ix-ax/axopen.simatic1500': 0.0.0-dev.0
   app_apaxappname: 0.0.0-dev.0
