--- a/src/traversals/apax/apax.yml
+++ b/src/traversals/apax/apax.yml
@@ -35,6 +35,8 @@ dependencies:
   '@ix-ax/axopen.components.rexroth.press': 0.0.0-dev.0
   app_axopen.components.robotics: 0.0.0-dev.0
   '@ix-ax/axopen.components.robotics': 0.0.0-dev.0
+  app_axopen.components.siemens.identification: 0.0.0-dev.0
+  '@ix-ax/axopen.components.siemens.identification': 0.0.0-dev.0
   app_axopen.components.ur.robotics: 0.0.0-dev.0
   '@ix-ax/axopen.components.ur.robotics': 0.0.0-dev.0
   ix_axopencore: 0.0.0-dev.0
