--- a/src/components.kuka.robotics/src/AXOpen.Components.Kuka.Robotics/ix_ax_axopen_components_kuka_robotics.csproj
+++ b/src/components.kuka.robotics/src/AXOpen.Components.Kuka.Robotics/ix_ax_axopen_components_kuka_robotics.csproj
@@ -83,5 +83,7 @@
 	  <ProjectReference Include="..\..\..\components.abstractions\src\AXOpen.Components.Abstractions\ix_ax_axopen_components_abstractions.csproj" />
 	  <ProjectReference Include="..\..\..\timers\src\AXOpen.Timers\ix_ax_axopen_timers.csproj" />
 	  <ProjectReference Include="..\..\..\abstractions\src\AXOpen.Abstractions\ix_ax_axopen_abstractions.csproj" />
+	  <ProjectReference Include="..\..\..\components.robotics\src\AXOpen.Components.Robotics\ix_ax_axopen_components_robotics.csproj" />
+	  <ProjectReference Include="..\..\..\io\src\AXOpen.Io\ix_ax_axopen_io.csproj" />
 	</ItemGroup>
 </Project>
